[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/screens/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/settings.png" type="Texture" id=5]
[ext_resource path="res://scenes/SceneTransition.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Redkost Comic.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -100.0
margin_right = 512.0
margin_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 188.0
margin_top = 19.0
margin_right = 836.0
margin_bottom = 180.0
custom_constants/separation = 16

[node name="TextLogoRTL" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 648.0
margin_bottom = 77.0
rect_min_size = Vector2( 648, 0 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[color=#ff77a8]P[/color][color=#ff004d]a[/color][color=#ab5236]i[/color][color=#ffa300]n[/color][color=#ffccaa]t[/color][color=#ffec27]e[/color][color=#00e436]r[/color][color=#008751]s[/color] [color=#ffffff]F[/color][color=#c2c3c7]o[/color][color=#5f574f]r[/color] [color=#29adff]H[/color][color=#1d2b53]i[/color][color=#442255]r[/color][color=#83769c]e[/color]"
text = "Painters For Hire"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 648.0
margin_bottom = 161.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 290.0
margin_right = 357.0
margin_bottom = 68.0
size_flags_horizontal = 0
custom_constants/separation = 16

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 67.0
margin_bottom = 26.0
text = "Host"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 67.0
margin_bottom = 68.0
text = "Join"

[node name="VersionLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 649.0
margin_right = 349.0
margin_bottom = 700.0
text = "Version 0.6.2
By Robert \"Develo\" Fuchs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -74.0
margin_top = -72.0
margin_right = -20.0
margin_bottom = -20.0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneTransitionTween" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
